Fixed Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,11 @@
   background-clip: text;
   color: transparent;
 }
-
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(3.0rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
 .react-type-animation-cursor {
   background: linear-gradient(to right, #2563eb, #9333ea);
   -webkit-background-clip: text;
